# nyx

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-GRANTS.md  README.md  README.zh-CN.md  RELEASE_CHECKLIST.md  ROADMAP.md  SECURITY.md  THIRDPARTY-LICENSES.html  action.yml  book.toml  build.rs  default-nyx.conf  deferred.md
.config/: nextest.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  corpus_promote.yml  docs.yml  dynamic.yml  eval.yml  fuzz.yml  image-builder.yml  release-build.yml  repro-bare.yml
action-scripts/: download.sh
benches/: dynamic_bench.rs  dynamic_bench_baseline.json  regen_baseline.sh  scan_bench.rs
benches/perf_fixtures/: large_go_module.go
docs/: SUMMARY.md  advanced-analysis.md  auth.md  cli.md  configuration.md  detectors.md  dynamic.md  dynamic_eval_m7.md  how-it-works.md  installation.md  language-maturity.md  mermaid-init.js  mermaid.css  output.md  quickstart.md  recall-validation.md  rules.md  serve.md
docs/detectors/: patterns.md  taint.md
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/api/: client.ts  types.ts
frontend/src/components/: VerdictBadge.tsx
frontend/src/contexts/: SSEContext.tsx  ThemeContext.tsx  ToastContext.tsx
frontend/src/graph/: styles.ts  types.ts
frontend/src/hooks/: useFindingsURLState.ts  useKeyboardShortcuts.ts  usePersistedState.ts
frontend/src/modals/: NewScanModal.tsx
fuzz/dynamic_corpus/: Cargo.toml
fuzz/dynamic_corpus/src/: main.rs
scripts/: README.md  capture-screenshots.mjs  check_corpus_sync.py  check_no_unseeded_rand.sh  corpus_dashboard.py  frame-screenshots.py  m7_ship_gate.sh  update_dynamic_goldens.sh  validate_recall.sh
src/: ast.rs  baseline.rs  callgraph.rs  cli.rs  convergence_telemetry.rs  database.rs  errors.rs  evidence.rs  fmt.rs  interop.rs  lib.rs  main.rs  output.rs  rank.rs  rust_resolve.rs  walk.rs
src/abstract_interp/: interval.rs  mod.rs  path_domain.rs  string_domain.rs
src/auth_analysis/: auth_markers.rs  checks.rs  config.rs  mod.rs  model.rs  router_facts.rs
src/cfg/: blocks.rs  cfg_tests.rs  conditions.rs  decorators.rs  dto.rs  helpers.rs  hierarchy.rs  imports.rs  literals.rs  mod.rs  params.rs  safe_fields.rs
src/cfg_analysis/: auth.rs  dominators.rs  error_handling.rs  guards.rs  mod.rs  resources.rs  tests.rs  unreachable.rs
src/chain/: edges.rs  feasibility.rs  finding.rs  impact.rs  mod.rs  reverify.rs  score.rs  search.rs
src/commands/: index.rs  mod.rs  repro.rs  rules.rs  scan.rs  serve.rs  surface.rs
src/constraint/: domain.rs  lower.rs  solver.rs
src/dynamic/: build_sandbox.rs  corpus.rs  differential.rs  environment.rs  harness.rs  middleware_demotion.rs  mod.rs  mount_filter.rs  oob.rs  oracle.rs  policy.rs  probe.rs  rand.rs  report.rs  repro.rs  runner.rs  sandbox.rs  spec.rs  telemetry.rs  toolchain.rs  trace.rs  verify.rs
src/entry_points/: mod.rs
src/labels/: c.rs  cpp.rs  go.rs  java.rs  javascript.rs  mod.rs  php.rs  python.rs  ruby.rs  rust.rs  typescript.rs
src/output/: json.rs  mod.rs  sarif.rs  severity.rs
src/patterns/: ejs.rs  java.rs  javascript.rs  mod.rs  python.rs  ruby.rs  typescript.rs
src/pointer/: analysis.rs
src/resolve/: mod.rs  tests.rs
src/server/: app.rs  assets.rs  debug.rs  health.rs  jobs.rs  models.rs  owasp.rs  progress.rs  triage_sync.rs
src/ssa/: alias.rs  const_prop.rs  copy_prop.rs  dce.rs  heap.rs  invariants.rs  ir.rs  lower.rs  mod.rs  param_points_to.rs  pointsto.rs  static_map.rs  type_facts.rs  xml_config.rs  xpath_config.rs
src/state/: engine.rs  facts.rs  lattice.rs  mod.rs  transfer.rs
src/summary/: mod.rs  points_to.rs  ssa_summary.rs  tests.rs
src/suppress/: mod.rs
src/surface/: build.rs  dangerous.rs  datastore.rs  exposure.rs  external.rs  graph.rs  mod.rs  reachability.rs  risk.rs
src/symbol/: mod.rs  tests.rs
src/symex/: executor.rs  heap.rs  interproc.rs  loops.rs  mod.rs  smt.rs  state.rs  strings.rs  transfer.rs  value.rs  witness.rs
src/taint/: backwards.rs  mod.rs  path_state.rs  tests.rs
src/utils/: config.rs  detector_options.rs  mod.rs  project.rs  redact.rs  targets.rs
tests/: auth_analysis_tests.rs  backwards_analysis_tests.rs  benchmark_test.rs  c_fixtures.rs  calibration_data_exfil.rs  chain_edges.rs  chain_emission.rs  chain_emission_e2e.rs  chain_reverify.rs  class_method_corpus.rs  cli_unsafe_sandbox.rs  cli_validation_tests.rs  console_snapshot.rs  cpp_fixtures.rs  cross_file_data_exfil_split_tests.rs  crypto_corpus.rs  data_exfil_corpus.rs  data_exfil_go_integration_tests.rs  data_exfil_java_integration_tests.rs  db_corruption_tests.rs  deserialize_corpus.rs  determinism_audit.rs  dynamic_c_build_pool.rs  dynamic_cpp_build_pool.rs  dynamic_go_build_pool.rs  dynamic_java_compile_pool.rs  dynamic_layering.rs  dynamic_node_build_pool.rs  dynamic_parity.rs  dynamic_php_build_pool.rs  dynamic_python_build_pool.rs  dynamic_ruby_build_pool.rs  dynamic_rust_build_pool.rs  dynamic_sandbox_escape.rs  dynamic_verify_e2e.rs  dynamic_workdir_clone.rs  engine_notes_rank_tests.rs  env_capture_flask.rs  fastapi_cross_file_include_router_tests.rs  fetch_data_exfil_integration_tests.rs  (+79 more)
tests/benchmark/: README.md  RESULTS.md  ground_truth.json
tests/benchmark/corpus/rust/auth/unsafe_actix_web_project_no_check/: Cargo.toml
tests/benchmark/corpus/rust/auth/unsafe_actix_web_project_no_check/src/: lib.rs
tests/benchmark/corpus/rust/safe/safe_non_web_rust_project/: Cargo.toml
tests/benchmark/corpus/rust/safe/safe_non_web_rust_project/src/: lib.rs
tests/common/: fixture_harness.rs  mod.rs  recall.rs
tests/eval_corpus/: budget.toml  check_surface.sh  manifest_gt_convert.py  owasp_gt_convert.py  report.py  run.sh  run_full.sh  sard_gt_convert.py  tabulate.py  test_manifest_gt_convert.py  test_tabulate_regression.py
tests/recall_targets/: blitz_apps.json  cal_com.json  perf_after.txt  perf_after_xlang.txt  shadcn_examples.json  vercel_commerce.json
tools/: sb-trace.sh
tools/image-builder/: images.toml  main.rs
tools/sb-trace/: README.md
(+1750 files in other folders)
