[package]
name = "safe_non_web_rust_project"
version = "0.1.0"
edition = "2021"

# Manifest deliberately names no Rust web framework.  The auth-analysis
# web-framework signal must derive Some(false) from this manifest, so
# every internal helper named `<thing>_id` and every `session.foo`
# chain in the source refuses the user-input evidence and
# missing_ownership_check stays silent.

[dependencies]
serde = "1"
tokio = { version = "1", features = ["full"] }
